# OpenGL-template

./: .gitignore  .gitmodules  CMakeCache.txt  CMakeLists.txt  CMakeLists_test.txt  Makefile  README.md  UPGRADE.md  bullet_only_test.cpp  cmake_install.cmake  ogt  test_bullet_simple.cpp
.github/: CONTRIBUTING.md
bullet_only_test/: CMakeLists.txt  bullet_only_test.cpp
bullet_test/: CMakeLists.txt  test_bullet.cpp
shaders/: particle.comp.glsl  particle.frag.glsl  particle.vert.glsl  shader.frag.glsl  shader.vert.glsl  triangle.frag.glsl  triangle.geom.glsl  triangle.vert.glsl
src/: main.cpp
src/camera/: camera.hpp
src/model/: mesh.cpp  mesh.h  model.cpp  model.h
src/shader/: shader.cpp  shader.cpp.backup2  shader.hpp
src/utils/: fileio.cpp  fileio.hpp
